--- a/o.html
+++ b/o.html
@@ -4,9 +4,8 @@
 	<title>Ship Arrival Information</title>
 <style>
 body {
-	width: 65%;
+	width: 50%;
 	margin: auto auto;
-}	
 p {
 font-family: "Open Sans", sans;
 }
@@ -19,7 +18,7 @@ font-family: "Open Sans", sans;
 </style>
 </head>
 <body>
-<p>Excellent — this image header is very helpful. It confirms several key points about the <strong>bark <em>Orion</em></strong> voyage that brought your ancestor’s family to New York on <strong>5 November 1849</strong>:</p>
+<p>The image of the Orion manifest is very helpful. It confirms several key points about the <strong>bark <em>Orion</em></strong> voyage that brought your ancestor’s family to New York on <strong>5 November 1849</strong>:</p>
 <h3>1. What the manifest shows</h3>
 <ul>
 <li><strong>Master:</strong> <em>F. Schwartze</em> (his signature is visible at bottom right).</li>
@@ -56,4 +55,3 @@ The line sometimes includes the <strong>pier or street (e.g., “South St., foot
 <p>If you like, I can suggest the <strong>exact newspaper database links</strong> (NY Herald, <em>Journal of Commerce</em>, etc.) and the most efficient search string to use for <em>Orion Schwartze Bremen November 1849</em>. Would you like me to do that next?</p>
 </body>
 </html>
-
