--- a/x.html
+++ b/x.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+<style>
+body {
+	width: 50%;
+	margin: auto auto;
+}
+p {
+font-family: "Open Sans", sans;
+}
+h1,h2,h3,h4 {
+	font-family: Karla;
+}
+ul,ol {
+font-family: "Red Hat Text", sans;
+}
+</style>
+</head>
+<body>
 <h1 id="find-the-orion-arrival-pier">Find the Orion Arrival Pier</h1>
 <p>See (https://chatgpt.com/c/68f25994-f068-8327-8dc4-ec0f7c016f46)[this
 chat] for the infor below</p>
@@ -247,3 +268,5 @@ title="New York Herald Archive">Allen County Public Library</a>)</li>
 <p>If you want, tell me when you plan to go to PFW and I’ll give you the
 exact <strong>click-path</strong> and <strong>query filters</strong> to
 pull the Marine/Ship News for Nov 5–7, 1849 in a couple of steps.</p>
+</body>
+</html>
